Cache bugfix.